# jjh-coffee-advent-calendar-2022-scraper

./: .gitignore  coffee_data.csv  main.py  pyproject.toml
